# cis194

./: .ghci  .gitignore  README.md  cis194.cabal  golf  riskcalc.py  runtest  stack.yaml
src/Cis194/Hw/: AParser.hs  Calc.hs  Editor.hs  Employee.hs  Fibonacci.hs  Golf.hs  Golf.hs.count  JLBufEditor.hs  JLBuffer.hs  JoinList.hs  JoinListBufEditor.hs  JoinListBuffer.hs  JoinListEditor.hs  Log.hs  LogAnalysis.hs  Parser.hs  Party.hs  Repl1.hs  Repl2.hs  Repl3.hs  Repl4.hs  Repl5.hs  Repl6.hs  Repl7.hs  Repl8.hs  Repl9.hs  ReplA.hs  ReplB.hs  Risk.hs  SExpr.hs  Scrabble.hs  Sized.hs  StackVM.hs  StringBufEditor.hs  Week1.hs  Week4.hs  Week8.hs  week1.exs
src/Cis194/homework/: week1.hs
test/Cis194/Hw/: CalcSpec.hs  FibonacciSpec.hs  JoinListSpec.hs  LogAnalysisSpec.hs  PartySpec.hs  Week1Spec.hs  Week4Spec.hs
