Name:                   cis194
Version:                0.0.0
Author:                 James Cooper <james@bitmechanic.com>
Maintainer:             James Cooper <james@bitmechanic.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Cis194.Hw.Week1
  Other-Modules:        
  Build-Depends:        MonadRandom >= 0.3.0.1
                      , base >= 4 && < 5
                      , containers

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        MonadRandom
                      , MonadRandom >= 0.3.0.1
                      , QuickCheck
                      , base
                      , containers
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
